--- a/lib/styles/globals.css
+++ b/lib/styles/globals.css
@@ -1,5 +1,21 @@
 @import "tailwindcss";
 
+@theme {
+  --color-background: #303030;
+  --color-paper: #424242;
+
+  --color-main-text: #ffffff;
+
+  --color-pink-text: #e1bee7;
+
+  --color-purple-text: #d1c4e9;
+  --color-purple-dark: #673ab7;
+
+  --color-teal: #a5d6a7;
+
+  --color-blue: #00bcd4;
+}
+
 input[type="number"] {
   -moz-appearance: textfield;
   appearance: textfield;
