--- a/lib/styles/globals.css
+++ b/lib/styles/globals.css
@@ -14,6 +14,17 @@
   --color-teal: #a5d6a7;
 
   --color-blue: #00bcd4;
+
+  --animate-slideDown: slideDown 0.3s ease-out forwards;
+
+  @keyframes slideDown {
+    from {
+      transform: translateY(-100%);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
 }
 
 input[type="number"] {
